# fastapi-signoz-test

./: .env.sample  .pre-commit-config.yaml  Makefile  OTEL_INSTRUMENTATION.md  README.md  docker-compose.yml  env.sample  pyproject.toml  setup.cfg  test_env.txt
builder/: docker-compose.build.yml
builder/docker-image/: Dockerfile.main
src/fastapi_signoz_test/: main.py  router.py
src/fastapi_signoz_test/core/: config.py  telemetry.py
src/fastapi_signoz_test/health/: schemas.py
src/fastapi_signoz_test/health/apiv1/: handler.py
src/fastapi_signoz_test/shared/: exceptions.py
src/fastapi_signoz_test/simulate/: __init__.py  schemas.py
src/fastapi_signoz_test/simulate/apiv1/: __init__.py  handler.py
src/fastapi_signoz_test/simulate/simulator/: README.md  __init__.py  complex.py  medium.py  simple.py
